# opt100

./: .gitignore  .gitmodules  README.md  flake.nix  pyproject.toml  run.sh
docs/: _config.yml  index.md
docs/02_最適化問題/: diet.html  index.md  linear.html  milp.html  socp.html
docs/72_スケジューリング問題/: delay.html  index.md  jobshop.html  permutation_flow_shop.html  resource_constrained.html  talent_scheduling.html  weighted_sum.html
docs/81_シフトスケジューリング問題/: index.md  nurse_scheduling.html  shift_scheduling.html
docs/94_充足可能性問題と重み付き制約充足問題/: index.md  sat.html
notebooks/: 33_割当問題
notebooks/02_最適化問題/: diet.ipynb  diet.py  linear.ipynb  linear.py  milp.ipynb  milp.py  socp.ipynb  socp.py
notebooks/02_最適化問題/__marimo__/: diet.ipynb  linear.ipynb  milp.ipynb
notebooks/72_スケジューリング問題/: delay.ipynb  delay.py  jobshop.ipynb  jobshop.py  permutation_flow_shop.ipynb  permutation_flow_shop.py  resource_constrained.py  talent_scheduling.py  weighted_sum.ipynb  weighted_sum.py
notebooks/72_スケジューリング問題/__marimo__/: delay.ipynb  jobshop.ipynb  permutation_flow_shop.ipynb  resource_constrained.ipynb  talent_scheduling.ipynb  weighted_sum.ipynb
notebooks/81_シフトスケジューリング問題/: nurse_scheduling.py  shift_scheduling.py
notebooks/81_シフトスケジューリング問題/__marimo__/: nurse_scheduling.ipynb  shift_scheduling.ipynb
notebooks/81_シフトスケジューリング問題/data/: .gitignore  get_data.sh
notebooks/94_充足可能性問題と重み付き制約充足問題/: sat.ipynb  sat.py
notebooks/94_充足可能性問題と重み付き制約充足問題/__marimo__/: sat.ipynb
