[project]
name = "opt100"
version = "0.1.0"
description = "opt100+ study notes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marimo>=0.11.25",
    "ruff>=0.8.2",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "jupyterlab-language-pack-ja-jp>=4.3.post0",
    "jupyterlab-lsp>=5.1.0",
    "jupyterlab-vim>=4.1.4",
    "python-lsp-ruff>=2.2.2",
    "python-lsp-server>=1.12.0",
]
